src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedTranslationKey2/InvalidUnexpectedTranslationKey2.php
<?php

namespace Invalid\UnexpectedTranslationKey2;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedTranslationKey2 extends ClarolinePlugin
{
    public function getNameTranslationKey()
    {
        return '';
    }
}